--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     },
     "require": {
         "illuminate/support": "~7|~8|~9|~10",
-        "linio/seller-center-sdk": "dev-gsc-master-dev",
+        "linio/seller-center-sdk": "dev-next",
         "astroselling/asexceptions": "^1.0",
         "guzzlehttp/psr7": "^1.7"
     },
